ready_for_deploy

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 <body>
     <div id="root">
         <div style="padding: 20px; text-align: center;">
-            <p>Загрузка дашборда...</p>
+            <p>Loading dashboard...</p>
         </div>
     </div>
+    <script src="env-check.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
