--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <p>Loading dashboard...</p>
         </div>
     </div>
+    <script>
+        window.API_TOKEN = undefined;
+    </script>
     <script src="env-check.js"></script>
     <script src="app.js"></script>
 </body>
